# Pioneer-3-DX-with-ROS-2

./: CMakeLists.txt  README.md  package.xml
launch/: pioneer3_bringup.launch.py
pioneer_dashboard_rviz/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
pioneer_dashboard_rviz/include/pioneer_dashboard_rviz/: dashboard_panel.hpp
pioneer_dashboard_rviz/src/: dashboard_panel.cpp
scripts/: lidar_node.py
src/: base_controller.cpp
